sas-core/main/default/objects/Case/fields/Group_Outbound_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Outbound_Date__c</fullName>
    <formula>Group_Travel_Request__r.Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group_Outbound_Date</label>
    <type>Date</type>
</CustomField>