sas-core/main/default/objects/Case/fields/Group_Travel_Request__c.field-meta.xml
<CustomField>
    <fullName>Group_Travel_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for relating the case with Group travel request</description>
    <label>Group Travel Request</label>
    <referenceTo>Group_Travel_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>