sas-core/main/default/objects/Case/fields/GSB_Flight_Length__c.field-meta.xml
<CustomField>
    <fullName>GSB_Flight_Length__c</fullName>
    <description>The length of the flight</description>
    <inlineHelpText>The length of the flight</inlineHelpText>
    <label>Group Sales Bulk Flight Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Haul</fullName>
            </value>
            <value>
                <fullName>Long Haul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>