sas-core/main/default/objects/Case/fields/GSB_Sales_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>GSB_Sales_Contract_Status__c</fullName>
    <description>Shows the lifecycle of the bulk sales contract</description>
    <inlineHelpText>Shows the lifecycle of the bulk sales contract</inlineHelpText>
    <label>Group Sales Bulk Sales/Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Contract sent</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>ADM logged</fullName>
            </value>
            <value>
                <fullName>ADM sent</fullName>
            </value>
            <value>
                <fullName>ADM disputed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>