sas-core/main/default/objects/Case/fields/Handling_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Handling_Instructions__c</fullName>
    <label>Handling Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>