sas-core/main/default/objects/Case/fields/IATA_Number__c.field-meta.xml
<CustomField>
    <fullName>IATA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IATA Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>