sas-core/main/default/objects/Case/fields/InactiveCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>InactiveCaseOwner__c</fullName>
    <formula>AND(BEGINS(Owner:User.Id , &quot;005&quot;),Owner:User.IsActive = false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InactiveCaseOwner</label>
    <type>Checkbox</type>
</CustomField>