sas-core/main/default/objects/Case/fields/InApproval__c.field-meta.xml
<CustomField>
    <fullName>InApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Approval</label>
    <type>Checkbox</type>
</CustomField>