sas-core/main/default/objects/Case/fields/Initially_Provided_PNR__c.field-meta.xml
<CustomField>
    <fullName>Initially_Provided_PNR__c</fullName>
    <description>PNR provided by the customer at chat.</description>
    <inlineHelpText>PNR provided by the customer at chat.</inlineHelpText>
    <label>Initially Provided PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>