sas-core/main/default/objects/Case/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>