sas-core/main/default/objects/Case/fields/IsEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the case has been escalated using to other department action</description>
    <inlineHelpText>Indicates whether or not the case has been escalated using to other department action</inlineHelpText>
    <label>IsEscalated</label>
    <type>Checkbox</type>
</CustomField>