sas-core/main/default/objects/Case/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for setting cases read-only</description>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>