sas-core/main/default/objects/Case/fields/IsRedirected__c.field-meta.xml
<CustomField>
    <fullName>IsRedirected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate that the case has been redirected to another department/team</description>
    <inlineHelpText>To indicate that the case has been redirected to another department/team</inlineHelpText>
    <label>IsRedirected</label>
    <type>Checkbox</type>
</CustomField>