sas-core/main/default/objects/Case/fields/IsReopened__c.field-meta.xml
<CustomField>
    <fullName>IsReopened__c</fullName>
    <formula>ReopenedCount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>