sas-core/main/default/objects/Case/fields/Last_Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_From_Address__c</fullName>
    <description>The email address from which the last email came to this case.</description>
    <inlineHelpText>The email address from which the last email came to this case.</inlineHelpText>
    <label>Last Email From Address</label>
    <type>Email</type>
</CustomField>