sas-core/main/default/objects/Case/fields/Last_Received_Email_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Received_Email_On__c</fullName>
    <description>The date &amp; time the latest email related to his case was received.</description>
    <inlineHelpText>The date &amp; time the latest email related to his case was received.</inlineHelpText>
    <label>Last Received Email On</label>
    <type>DateTime</type>
</CustomField>