sas-core/main/default/objects/Case/fields/Legal_Case_Diary_Migration__c.field-meta.xml
<CustomField>
    <fullName>Legal_Case_Diary_Migration__c</fullName>
    <description>Field used for the Legal Case Diary Migration. It will get deleted afterwards</description>
    <label>Legal Case Diary Migration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>