sas-core/main/default/objects/Case/fields/LIA_Claim__c.field-meta.xml
<CustomField>
    <fullName>LIA_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Liability Claim linked to the current case</description>
    <inlineHelpText>Liability Claim related to this case</inlineHelpText>
    <label>Liability Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>