sas-core/main/default/objects/Case/fields/LIA_Date_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>LIA_Date_of_Receipt__c</fullName>
    <formula>LIA_Claim__r.Date_of_Receipt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Receipt</label>
    <type>Date</type>
</CustomField>