sas-core/main/default/objects/Case/fields/LIA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>LIA_Deadline__c</fullName>
    <formula>LIA_Claim__r.Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>