sas-core/main/default/objects/Case/fields/LIA_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>LIA_Flight_Date__c</fullName>
    <description>Flight Date related to the liability claim</description>
    <formula>LIA_Claim__r.Flight_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fight Date related to the liability claim</inlineHelpText>
    <label>Liability Flight Date</label>
    <type>Date</type>
</CustomField>