sas-core/main/default/objects/Case/fields/LIA_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>LIA_Flight_Number__c</fullName>
    <description>Flight number related to the liability claim</description>
    <formula>LIA_Claim__r.Flight_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flight Number related to the liability claim</inlineHelpText>
    <label>Liability Flight Number</label>
    <type>Text</type>
</CustomField>