sas-core/main/default/objects/Case/fields/LIA_Judicial_Body__c.field-meta.xml
<CustomField>
    <fullName>LIA_Judicial_Body__c</fullName>
    <description>Judicial Body name to be used in email templates</description>
    <formula>TEXT(LIA_Claim__r.Judicial_Body__c)</formula>
    <label>Liability Judicial Body</label>
    <type>Text</type>
</CustomField>