sas-core/main/default/objects/Case/fields/LIA_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>LIA_Jurisdiction__c</fullName>
    <formula>TEXT(LIA_Claim__r.Jurisdiction__c)</formula>
    <label>Jurisdiction</label>
    <type>Text</type>
</CustomField>