sas-core/main/default/objects/Case/fields/LIA_Name_of_Judicial_Body__c.field-meta.xml
<CustomField>
    <fullName>LIA_Name_of_Judicial_Body__c</fullName>
    <description>Name of the Judicial Body for email templates</description>
    <formula>TEXT(LIA_Claim__r.Name_of_Judicial_Body__c)</formula>
    <label>Liability Name of Judicial Body</label>
    <type>Text</type>
</CustomField>