sas-core/main/default/objects/Case/fields/LIA_Passenger_s__c.field-meta.xml
<CustomField>
    <fullName>LIA_Passenger_s__c</fullName>
    <description>Name of the passengers in the liability claim to be used in the email templates</description>
    <formula>LIA_Claim__r.Name_of_Passenger_s__c</formula>
    <label>Liability Passenger(s)</label>
    <type>Text</type>
</CustomField>