sas-core/main/default/objects/Case/fields/LIA_PNR__c.field-meta.xml
<CustomField>
    <fullName>LIA_PNR__c</fullName>
    <description>PNR related to the Liability Claim</description>
    <formula>LIA_Claim__r.Liability_PNR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PNR related to the Liability Claim</inlineHelpText>
    <label>Claim PNR</label>
    <type>Text</type>
</CustomField>