sas-core/main/default/objects/Case/fields/Number_of_Email_Messages_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Email_Messages_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of emails received to this case. Doesn&apos;t include messages sent.</description>
    <inlineHelpText>The amount of emails received to this case. Doesn&apos;t include messages sent.</inlineHelpText>
    <label>Number of Email Messages Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>