sas-core/main/default/objects/Case/fields/Number_of_Email_Messages_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Email_Messages_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of emails sent from this case. Doesn&apos;t include the initial auto-response, or messages received.</description>
    <inlineHelpText>The amount of emails sent from this case. Doesn&apos;t include the initial auto-response, or messages received.</inlineHelpText>
    <label>Number of Email Messages Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>