sas-core/main/default/objects/Case/fields/PIR__c.field-meta.xml
<CustomField>
    <fullName>PIR__c</fullName>
    <label>PIR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>