sas-core/main/default/objects/Case/fields/PNR_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>PNR_Payment_Status__c</fullName>
    <inlineHelpText>Update payment status for the PNR</inlineHelpText>
    <label>PNR Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for NC</fullName>
            </value>
            <value>
                <fullName>Waiting for Deposit</fullName>
            </value>
            <value>
                <fullName>Waiting for Final Payment</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>