sas-core/main/default/objects/Case/fields/Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale__c</fullName>
    <description>From where the customer make bulk request is</description>
    <inlineHelpText>From where the customer make bulk request is</inlineHelpText>
    <label>Point of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>RU</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Forsvaret NO</fullName>
                <isActive>false</isActive>
                <label>Forsvaret NO</label>
            </value>
            <value>
                <fullName>Interline</fullName>
                <isActive>false</isActive>
                <label>Interline</label>
            </value>
            <value>
                <fullName>Olympic DK</fullName>
                <isActive>false</isActive>
                <label>Olympic DK</label>
            </value>
            <value>
                <fullName>Olympic NO</fullName>
                <isActive>false</isActive>
                <label>Olympic NO</label>
            </value>
            <value>
                <fullName>Olympic SE</fullName>
                <isActive>false</isActive>
                <label>Olympic SE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>