sas-core/main/default/objects/Case/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <description>Used to track the last owner of the case when case owner changes from owner to Queue when case reopens..</description>
    <label>Previous Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>