sas-core/main/default/objects/Case/fields/Proactivity__c.field-meta.xml
<CustomField>
    <fullName>Proactivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use to manually link a case to a proactivity</description>
    <inlineHelpText>Use to manually link a case to a proactivity</inlineHelpText>
    <label>Proactivity</label>
    <referenceTo>Proactivity__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>