sas-core/main/default/objects/Case/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Used to track the Queue of Case assigned.</description>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>