sas-core/main/default/objects/Case/fields/Refund_Cancel_All_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Refund_Cancel_All_Passengers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel All Passengers</label>
    <type>Checkbox</type>
</CustomField>