sas-core/main/default/objects/Case/fields/Refund_Country_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Refund_Country_of_Purchase__c</fullName>
    <formula>Refund_Request__r.Country_of_Purchase__c</formula>
    <label>Refund Country of Purchase</label>
    <type>Text</type>
</CustomField>