sas-core/main/default/objects/Case/fields/Refund_Flights_To_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Refund_Flights_To_Cancel__c</fullName>
    <label>Flights To Cancel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>