sas-core/main/default/objects/Case/fields/Refund_Is_Booking_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Refund_Is_Booking_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Cancelled</label>
    <type>Checkbox</type>
</CustomField>