sas-core/main/default/objects/Case/fields/Refund_Passengers_To_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Refund_Passengers_To_Cancel__c</fullName>
    <label>Passengers To Cancel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>