sas-core/main/default/objects/Case/fields/Refund_PNR__c.field-meta.xml
<CustomField>
    <fullName>Refund_PNR__c</fullName>
    <formula>Refund_Request__r.PNR__c</formula>
    <label>Refund PNR</label>
    <type>Text</type>
</CustomField>