sas-core/main/default/objects/Case/fields/Refund_Request__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Request</label>
    <referenceTo>Refund_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
	<complianceGroup>Lookup</complianceGroup>
    <type>Lookup</type>
</CustomField>