sas-core/main/default/objects/Case/fields/Refund_Request_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Sub_type__c</fullName>
    <formula>TEXT( Refund_Request__r.Request_Type_Sub_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Request Sub-type</label>
    <type>Text</type>
</CustomField>