sas-core/main/default/objects/Case/fields/Refund_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Type__c</fullName>
    <formula>TEXT( Refund_Request__r.Request_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Request Type</label>
    <type>Text</type>
</CustomField>