sas-core/main/default/objects/Case/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>For Bulk Group Sales, it indicates the season related to sales</description>
    <inlineHelpText>The season for the bulk group sales</inlineHelpText>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S21</fullName>
            </value>
            <value>
                <fullName>W21/22</fullName>
            </value>
            <value>
                <fullName>S22</fullName>
            </value>
            <value>
                <fullName>W22/23</fullName>
            </value>
            <value>
                <fullName>S23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>