sas-core/main/default/objects/Case/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>The site of the first case owner (that is a user)</description>
    <inlineHelpText>The site of the first case owner (that is a user)</inlineHelpText>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>