sas-core/main/default/objects/Case/fields/Special_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Service Request</label>
    <referenceTo>Special_Service_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>