sas-core/main/default/objects/Case/fields/StatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>StatusReadOnly__c</fullName>
    <description>Field created to display the status in read-only</description>
    <formula>TEXT(Status)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>