sas-core/main/default/objects/Case/fields/SubTeam__c.field-meta.xml
<CustomField>
    <fullName>SubTeam__c</fullName>
    <description>The sub team of the record owner</description>
    <inlineHelpText>The sub team of the record owner</inlineHelpText>
    <label>Sub Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Team 1.1</fullName>
            </value>
            <value>
                <fullName>Team 1.2</fullName>
            </value>
            <value>
                <fullName>Team 1.3</fullName>
            </value>
            <value>
                <fullName>Team 2.1</fullName>
            </value>
            <value>
                <fullName>Team 2.2</fullName>
            </value>
            <value>
                <fullName>Team 2.3</fullName>
            </value>
            <value>
                <fullName>Team 3.1</fullName>
            </value>
            <value>
                <fullName>Team 3.2</fullName>
            </value>
            <value>
                <fullName>Team 3.3</fullName>
            </value>
            <value>
                <fullName>Team 4.1</fullName>
            </value>
            <value>
                <fullName>Team 4.2</fullName>
            </value>
            <value>
                <fullName>Team 4.3</fullName>
            </value>
            <value>
                <fullName>Team 5.1</fullName>
            </value>
            <value>
                <fullName>Team 5.2</fullName>
            </value>
            <value>
                <fullName>Team 5.3</fullName>
            </value>
            <value>
                <fullName>Team 6.1</fullName>
            </value>
            <value>
                <fullName>Team 6.2</fullName>
            </value>
            <value>
                <fullName>Team 6.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>