sas-core/main/default/objects/Case/fields/SurveyInvitationLink__c.field-meta.xml
<CustomField>
    <fullName>SurveyInvitationLink__c</fullName>
    <label>Survey Invitation Link</label>
    <type>Url</type>
</CustomField>