sas-core/main/default/objects/Case/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>The team of the first case owner (that is a user)</description>
    <inlineHelpText>The team of the first case owner (that is a user)</inlineHelpText>
    <label>Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>